objects/GenEd_Users__c.object
<CustomObject>
    <fields>
        <fullName>AccessLevel__c</fullName>
        <label>AccessLevel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomField10__c</fullName>
        <label>CustomField10</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomField1__c</fullName>
        <label>CustomField1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CustomField2__c</fullName>
        <label>CustomField2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DisableMessages__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DisableMessages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>JobTitle__c</fullName>
        <label>JobTitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastLogin__c</fullName>
        <label>LastLogin</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoginKey__c</fullName>
        <label>LoginKey</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OriginalId__c</fullName>
        <label>OriginalId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PhoneMobile__c</fullName>
        <label>PhoneMobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhoneWork__c</fullName>
        <label>PhoneWork</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceAccountId__c</fullName>
        <label>SalesforceAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceContactId__c</fullName>
        <label>SalesforceContactId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skype__c</fullName>
        <label>Skype</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street1__c</fullName>
        <label>Street1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street2__c</fullName>
        <label>Street2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <label>TimeZone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Users_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Users Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>GenEd_Users</label>
    <nameField>
        <label>GenED_Users Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GenEd_Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>